--- a/Axes-Scientifiques.html
+++ b/Axes-Scientifiques.html
@@ -21,7 +21,7 @@
                <div class="logo-container">
                      <img src="logo.png" alt="Logo" class="logo">
                 </div>
-                <li><a href="index2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown"><a href="about-us.html">About Us</a>
                     <ul class="dropdown-content">
                         <li><a href="Axes-Scientifiques.html">Axes Scientifiques?</a></li>
@@ -89,7 +89,7 @@
                 <li><a href="index2.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="#icgh-meetings">ICGH Meetings</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         <p>&copy; 2024 Congrès de Physique et Chimie. Tous droits réservés.</p>
     </footer>
