--- a/Axes-Scientifiques.html
+++ b/Axes-Scientifiques.html
@@ -86,7 +86,7 @@
             </div>
             <!-- Footer Navigation Links (same as Header) -->
             <ul class="footer-nav">
-                <li><a href="index2.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html">About Us</a></li>
                 <li><a href="#icgh-meetings">ICGH Meetings</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
