--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
         <h2 class="icgh__title"><span class="letter">T</span><span class="ml-1">opics</span></h2>
             <div class="topics-container">
                 <div class="topics-text">
-        <p>  1    Synthèse chimique des nanoparticules et nouveaux matériaux.<br>
-             2    Applications des nanoparticules dans les dispositifs médicaux.<br>
-             3    Impact des nanoparticules sur les diagnostics avancés.<br>
-             4    Photocatalyse pour la purification de l'eau et de l'air.<br>
-             5    Matériaux semi-conducteurs pour la photodégradation.<br>
-             6    Avancées dans les procédés d'oxydation avancée (AOP).<br>
-             7    Nanomatériaux pour les technologies solaires.<br>
-             8    Innovations dans l'énergie éolienne, hydraulique et biomasse.<br>
-             9    Nanotubes de carbone et polymères pour la mécanique de pointe.<br>
-            10   Techniques innovantes pour la production d’hydrogène vert.<br>
-            11   Matériaux avancés pour le stockage de l’hydrogène.<br>
+        <p>  <span class="topic-number">1</span>   Synthèse chimique des nanoparticules et nouveaux matériaux.<br>
+             <span class="topic-number">2</span>   Applications des nanoparticules dans les dispositifs médicaux.<br>
+             <span class="topic-number">3</span>   Impact des nanoparticules sur les diagnostics avancés.<br>
+             <span class="topic-number">4</span>    Photocatalyse pour la purification de l'eau et de l'air.<br>
+             <span class="topic-number">5</span>   Matériaux semi-conducteurs pour la photodégradation.<br>
+             <span class="topic-number">6</span>    Avancées dans les procédés d'oxydation avancée (AOP).<br>
+             <span class="topic-number">7</span>    Nanomatériaux pour les technologies solaires.<br>
+             <span class="topic-number">8</span>   Innovations dans l'énergie éolienne, hydraulique et biomasse.<br>
+             <span class="topic-number">9</span>    Nanotubes de carbone et polymères pour la mécanique de pointe.<br>
+            <span class="topic-number">10</span>   Techniques innovantes pour la production d’hydrogène vert.<br>
+            <span class="topic-number">11</span>   Matériaux avancés pour le stockage de l’hydrogène.<br>
 
         </p>
                  </div>
