--- a/Comité-scientifique.html
+++ b/Comité-scientifique.html
@@ -210,7 +210,13 @@
         <p>&copy; 2024 Congrès de Physique et Chimie. Tous droits réservés.</p>
     </footer>
 
-    
+        <script>
+        // Le script JavaScript toggleMenu
+        function toggleMenu() {
+            const nav = document.querySelector("nav");
+            nav.classList.toggle("responsive");
+        }
+    </script>
 
 </body>
 </html>
