--- a/about-us.html
+++ b/about-us.html
@@ -70,7 +70,13 @@
             </ul>
         <p>&copy; 2024 Congrès de Physique et Chimie. Tous droits réservés.</p>
     </footer>
-
+    <script>
+        // Le script JavaScript toggleMenu
+        function toggleMenu() {
+            const nav = document.querySelector("nav");
+            nav.classList.toggle("responsive");
+        }
+    </script>
     
 
 </body>
