--- a/axe1.html
+++ b/axe1.html
@@ -78,7 +78,13 @@
     </footer>
 
     
-
+    <script>
+        // Le script JavaScript toggleMenu
+        function toggleMenu() {
+            const nav = document.querySelector("nav");
+            nav.classList.toggle("responsive");
+        }
+    </script>
 </body>
 </html>
 
