--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
         </div>
     </section>  
 <main class="axe-details">
-        <section id="location">
+        <section id="about">
     <h1><span class="ml-1">International conference on Advanced Nanomaterials for photocatalysis and Energy Applications (ICANPEA2025)</span></h1>
     <p>ICANPEA2025 est un événement d’intérêt scientifique important en chimie et physiques des nanomatériaux, il fournit un forum idéal pour La visibilité et la valorisation de la recherche. ICANPEA2025 offre l'occasion de promouvoir le progrès scientifique et  permettent aux enseignants-chercheurs, les professionnels, et les  doctorants d'interagir facilement en face à face. Les participants sont invités  à ouvrir le débat avec tous ceux qui est-on relation avec les thèmes proposés dans cet événement.   </p>
   </main>
