--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,7 @@
     </section>  
 <main class="axe-details">
         <section id="about">
-    <h1><span class="ml-1">International conference on Advanced Nanomaterials for photocatalysis and Energy Applications (ICANPEA2025)</span></h1>
+    <h1 style="font-size: 21px;line-height: 0.9;letter-spacing: 0.111em;font-weight: 800;"><span class="ml-1">International conference on Advanced Nanomaterials for photocatalysis and Energy Applications (ICANPEA2025)</span></h1>
     <p>ICANPEA2025 est un événement d’intérêt scientifique important en chimie et physiques des nanomatériaux, il fournit un forum idéal pour La visibilité et la valorisation de la recherche.<br> ICANPEA2025 offre l'occasion de promouvoir le progrès scientifique et  permettent aux enseignants-chercheurs, les professionnels, et les  doctorants d'interagir facilement en face à face.<br> Les participants sont invités  à ouvrir le débat avec tous ceux qui est-on relation avec les thèmes proposés dans cet événement.   </p>
   </main>
       </section>
